fix-FLT: V26e10: Fixed not deleting empty ACS after attack

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V26e9
-=====================
+Следующий релиз V26e10
+======================
 
 [!] Интерфейс: Разнесены по разным страницам  отправка  флота  и  информация  о
     флотах в полете. Теперь флот отправляется через пункт меню "Флот на орбите"
@@ -34,6 +34,7 @@
 [%] Флот: Теперь корректно выводится сообщени об ошибке при  попытке  отправить
     флот на несуществующую планету
 [%] Флот: исправлена ошибка создания САБа в случае, когда летит максимум флотов
+[%] Флот: исправлена ошибка неудаления пустого САБа после атаки
 
 [@] SQL: По умолчанию в дампе счетчик посещений - отключен, а игра - включена
 [@] Теперь можно отключить защиту слабых игроков, сбросив game_noob_factor в 0
