fix-FLT: Fixed duplication of ACS list on fleet destination selection page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -35,6 +35,7 @@
     флот на несуществующую планету
 [%] Флот: исправлена ошибка создания САБа в случае, когда летит максимум флотов
 [%] Флот: исправлена ошибка неудаления пустого САБа после атаки
+[%] Флот: Исправлена ошибка дублирования списка САБов
 
 [@] SQL: По умолчанию в дампе счетчик посещений - отключен, а игра - включена
 [@] Теперь можно отключить защиту слабых игроков, сбросив game_noob_factor в 0
@@ -48,7 +49,7 @@
 [@] Изменена система слежения за  игроками.  Теперь  не  логгируются  неопасные
     запросы (SELECT, START TRANSACTION,  COMMIT,  ROLLBACK).  При  логгировании
     запроса так же записывается стандартный набор переменных
-
+[@] В процедуру апдейта добавлена очистка старого списка САБов
 
 Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
 ===================================================================
