misc-MSG: Maintenance now removes only messages with unknown recipient and/or messages older then 30 days

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V26e10
+Следующий релиз V26e11
 ======================
 
 [!] Интерфейс: Разнесены по разным страницам  отправка  флота  и  информация  о
@@ -21,6 +21,8 @@
     вложенности каталогов
 
 [~] Экономика/Ресурсы: По многочисленным просьбам добавлена колонка "В час"
+[~] Админка: Процедура  обслуживания  БД  теперь  удаляет  только  сообщения  с
+    неизвестным адресатом и сообщения, старше 30 дней
 
 [%] Экономика/Ресурсы: Добавлена проверка на корректный процент производства на
     странице "Ресурсы"
