misc-INT: V26e13: Password also prints on post-registration page - in case if mail with password didn't arrive to user

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V26e11
+Следующий релиз V26e13
 ======================
 
 [!] Интерфейс: Разнесены по разным страницам  отправка  флота  и  информация  о
@@ -23,6 +23,8 @@
 [~] Экономика/Ресурсы: По многочисленным просьбам добавлена колонка "В час"
 [~] Админка: Процедура  обслуживания  БД  теперь  удаляет  только  сообщения  с
     неизвестным адресатом и сообщения, старше 30 дней
+[~] Регистрация: Пароль теперь так же указывается на странице  пост-регистрации
+    - на случай, если письмо с паролем не дойдет до адресата
 
 [%] Экономика/Ресурсы: Добавлена проверка на корректный процент производства на
     странице "Ресурсы"
