--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,16 +9,16 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V26e13
+Следующий релиз V26e14
 ======================
+
+[!] Движок:  Теперь  СН  может  размещаться  на  веб-сервере  на  любом  уровне
+    вложенности каталогов
 
 [!] Интерфейс: Разнесены по разным страницам  отправка  флота  и  информация  о
     флотах в полете. Теперь флот отправляется через пункт меню "Флот на орбите"
     раздела "Планета", а информация о летящих флотах доступна через пункт  меню
     "Флоты в полете" раздела "Империя"
-
-[!] Движок:  Теперь  СН  может  размещаться  на  веб-сервере  на  любом  уровне
-    вложенности каталогов
 
 [~] Экономика/Ресурсы: По многочисленным просьбам добавлена колонка "В час"
 [~] Админка: Процедура  обслуживания  БД  теперь  удаляет  только  сообщения  с
@@ -40,7 +40,10 @@
 [%] Флот: исправлена ошибка создания САБа в случае, когда летит максимум флотов
 [%] Флот: исправлена ошибка неудаления пустого САБа после атаки
 [%] Флот: Исправлена ошибка дублирования списка САБов
+[%] Альянсы: Исправлена ошибка вывода заявки  на  странице  управления  заявок.
+    Теперь если в заявке есть переводы строк, то заявка корректо форматируется
 
+[@] Обновлены инструкции в файле /docs/install.txt
 [@] SQL: По умолчанию в дампе счетчик посещений - отключен, а игра - включена
 [@] Теперь можно отключить защиту слабых игроков, сбросив game_noob_factor в 0
 [@] Исправлено несколько участков кода, выдающих предупреждения в логи
@@ -54,6 +57,10 @@
     запросы (SELECT, START TRANSACTION,  COMMIT,  ROLLBACK).  При  логгировании
     запроса так же записывается стандартный набор переменных
 [@] В процедуру апдейта добавлена очистка старого списка САБов
+[@] Альянсы: Страницы "Настройка прав  доступа",  "Список  участиков  Альянса",
+    "Поиск Альянса", "Создание Альянса", "Управление заявками"  переделаны  под
+    PTE
+
 
 Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
 ===================================================================
