misc-SYS: V26e15: All ship ID replaced by constants. Also some misc changes - see changelog for details

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,6 +9,13 @@
  [@] Ёта информаци€ будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
+—ледующий релиз V26e15
+======================
+[~] " рейсер" переименован в "Ёсминец", а "Ћинкор" - в " рейсер"
+
+[-] »з кода убрана английска€ локализаци€ - больша€ еЄ часть все равно была на
+    русском, а остальное не соответствовало реальности
+
 —ледующий релиз V26e14
 ======================
 
