feature-LNG: V26e16: Added English translation by madmax1991

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,11 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V26e15
+Следующий релиз V26e16
 ======================
+
+[+] Добавлен английский перевод (с) madmax1991
+
 [~] "Крейсер" переименован в "Эсминец", а "Линкор" - в "Крейсер"
 
 [-] Из кода убрана английская локализация - большая её часть все равно была на
