fix-ADM: V26e17: Fixed ban facility

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,15 +9,15 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V26e16
+Следующий релиз V26e17
 ======================
 
 [+] Добавлен английский перевод (с) madmax1991
 
 [~] "Крейсер" переименован в "Эсминец", а "Линкор" - в "Крейсер"
 
-[-] Из кода убрана английская локализация - большая её часть все равно была на
-    русском, а остальное не соответствовало реальности
+[%] Админка: Исправлена баннерилка
+
 
 Следующий релиз V26e14
 ======================
