doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,15 +12,7 @@
 Следующий релиз V26e17
 ======================
 
-[+] Добавлен английский перевод (с) madmax1991
-
-[~] "Крейсер" переименован в "Эсминец", а "Линкор" - в "Крейсер"
-
-[%] Админка: Исправлена баннерилка
-
-
-Следующий релиз V26e14
-======================
+[!] Добавлен английский перевод (с) madmax1991
 
 [!] Движок:  Теперь  СН  может  размещаться  на  веб-сервере  на  любом  уровне
     вложенности каталогов
@@ -30,6 +22,7 @@
     раздела "Планета", а информация о летящих флотах доступна через пункт  меню
     "Флоты в полете" раздела "Империя"
 
+[~] "Крейсер" переименован в "Эсминец", а "Линкор" - в "Крейсер"
 [~] Экономика/Ресурсы: По многочисленным просьбам добавлена колонка "В час"
 [~] Админка: Процедура  обслуживания  БД  теперь  удаляет  только  сообщения  с
     неизвестным адресатом и сообщения, старше 30 дней
@@ -52,6 +45,9 @@
 [%] Флот: Исправлена ошибка дублирования списка САБов
 [%] Альянсы: Исправлена ошибка вывода заявки  на  странице  управления  заявок.
     Теперь если в заявке есть переводы строк, то заявка корректо форматируется
+[%] Админка: Исправлена баннерилка
+[%] Вселенная: Корректно выводится сообщение при попытке нападения на игрока  в
+    отпуске
 
 [@] Обновлены инструкции в файле /docs/install.txt
 [@] SQL: По умолчанию в дампе счетчик посещений - отключен, а игра - включена
