--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,14 +9,12 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V26e17
+Следующий релиз V26e19
 ======================
 
-[!] Добавлен английский перевод (с) madmax1991
-
+[!] Локализация: Добавлена английская локализация (с) madmax1991
 [!] Движок:  Теперь  СН  может  размещаться  на  веб-сервере  на  любом  уровне
     вложенности каталогов
-
 [!] Интерфейс: Разнесены по разным страницам  отправка  флота  и  информация  о
     флотах в полете. Теперь флот отправляется через пункт меню "Флот на орбите"
     раздела "Планета", а информация о летящих флотах доступна через пункт  меню
@@ -54,7 +52,7 @@
 [@] Теперь можно отключить защиту слабых игроков, сбросив game_noob_factor в 0
 [@] Исправлено несколько участков кода, выдающих предупреждения в логи
 [@] Убрана запись сообщения в логи о постройке ПЗ/отмене очереди верфи
-[@] Чат: Изменилось выделение сообщеник команды сервера. Теперь выделяется  ник
+[@] Чат: Изменилось выделение сообщений команды сервера. Теперь выделяется  ник
     и  в  сообщениях  можно  использовать  все  стандартные  цвета.  Переменная
     конфигурации     chat_admin_msgFormat      заменена      на      переменную
     chat_admin_highlight. В ней можно использовать  HTML  коды.  Место  вставки
