feat-LNG: V26e20: Many changes to localization subsystem. See changelog_dev.txt for details

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,18 +9,28 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V26e19
-======================
+Следующий релиз
+Project "SuperNova.WS" Release 26.1 - We speak English! (2011-03-XX XX:XX)
+==========================================================================
 
-[!] Локализация: Добавлена английская локализация (с) madmax1991
+Текущая версия V26e20
+=====================
+
 [!] Движок:  Теперь  СН  может  размещаться  на  веб-сервере  на  любом  уровне
     вложенности каталогов
+[!] Локализация: Добавлена английская локализация (с)  madmax1991.  Существенно
+    уменьшено количество файлов локализации: неиспользуемые  файлы  удалены,  а
+    небольшие файлы влиты в system.mo
+[!] Включена возможность выбора языка для пользователей
 [!] Интерфейс: Разнесены по разным страницам  отправка  флота  и  информация  о
     флотах в полете. Теперь флот отправляется через пункт меню "Флот на орбите"
     раздела "Планета", а информация о летящих флотах доступна через пункт  меню
     "Флоты в полете" раздела "Империя"
+[!] "Крейсер" переименован в "Эсминец", а "Линкор" - в "Крейсер"
 
-[~] "Крейсер" переименован в "Эсминец", а "Линкор" - в "Крейсер"
+[+] Админка: Язык игры по  умолчанию  теперь  выбирается  из  списка  доступных
+    языков
+
 [~] Экономика/Ресурсы: По многочисленным просьбам добавлена колонка "В час"
 [~] Админка: Процедура  обслуживания  БД  теперь  удаляет  только  сообщения  с
     неизвестным адресатом и сообщения, старше 30 дней
@@ -64,6 +74,10 @@
 [@] Альянсы: Страницы "Настройка прав  доступа",  "Список  участиков  Альянса",
     "Поиск Альянса", "Создание Альянса", "Управление заявками"  переделаны  под
     PTE
+[~] Локализация: Серьезно переработаны файлы локализации: добавлена полноценная
+    информация о локализации (файл language.mo в каталоге локализации); удалено
+    множество неиспользуемых файлов;  несколько  маленьких  файлов  локализации
+    "влиты" в system.mo
 
 
 Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
