feat-SHR: V26e21: Full rewrite of Shortcut system

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -13,7 +13,7 @@
 Project "SuperNova.WS" Release 26.1 - We speak English! (2011-03-XX XX:XX)
 ==========================================================================
 
-Текущая версия V26e20
+Текущая версия V26e21
 =====================
 
 [!] Движок:  Теперь  СН  может  размещаться  на  веб-сервере  на  любом  уровне
@@ -22,6 +22,9 @@ Project "SuperNova.WS" Release 26.1 - We speak English! (2011-03-XX XX:XX)
     уменьшено количество файлов локализации: неиспользуемые  файлы  удалены,  а
     небольшие файлы влиты в system.mo
 [!] Включена возможность выбора языка для пользователей
+[!] Закладки: Полностью переписана система закладок. Теперь закладки хранятся в
+    отдельной таблице и не захламляют данные пользователя. Полностью переделано
+    редактирование закладок
 [!] Интерфейс: Разнесены по разным страницам  отправка  флота  и  информация  о
     флотах в полете. Теперь флот отправляется через пункт меню "Флот на орбите"
     раздела "Планета", а информация о летящих флотах доступна через пункт  меню
@@ -36,6 +39,8 @@ Project "SuperNova.WS" Release 26.1 - We speak English! (2011-03-XX XX:XX)
     неизвестным адресатом и сообщения, старше 30 дней
 [~] Регистрация: Пароль теперь так же указывается на странице  пост-регистрации
     - на случай, если письмо с паролем не дойдет до адресата
+[~] Флоты: Немного изменил страницу 1 отправки флотов - теперь закладки, базы и
+    боевые союзы выводятся бок-о-бок в три колонки
 
 [%] Экономика/Ресурсы: Добавлена проверка на корректный процент производства на
     странице "Ресурсы"
