feat-CRV: Added page for viewing combat reports. Also some fixes to localization system - see changelog_dev for details

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -13,7 +13,7 @@
 Project "SuperNova.WS" Release 26.1 - We speak English! (2011-03-XX XX:XX)
 ==========================================================================
 
-Текущая версия V26e21
+Текущая версия V26e22
 =====================
 
 [!] Движок:  Теперь  СН  может  размещаться  на  веб-сервере  на  любом  уровне
@@ -25,6 +25,8 @@ Project "SuperNova.WS" Release 26.1 - We speak English! (2011-03-XX XX:XX)
 [!] Закладки: Полностью переписана система закладок. Теперь закладки хранятся в
     отдельной таблице и не захламляют данные пользователя. Полностью переделано
     редактирование закладок
+[!] Боевой отчет: Добавлена страница для просмотра боевого отчета по его  коду.
+    В меню в раздел "Информация" добавлена соответствующая ссылка
 [!] Интерфейс: Разнесены по разным страницам  отправка  флота  и  информация  о
     флотах в полете. Теперь флот отправляется через пункт меню "Флот на орбите"
     раздела "Планета", а информация о летящих флотах доступна через пункт  меню
@@ -33,6 +35,10 @@ Project "SuperNova.WS" Release 26.1 - We speak English! (2011-03-XX XX:XX)
 
 [+] Админка: Язык игры по  умолчанию  теперь  выбирается  из  списка  доступных
     языков
+[+] Локализация: Серьезно переработаны файлы локализации: добавлена полноценная
+    информация о локализации (файл language.mo в каталоге локализации); удалено
+    множество неиспользуемых файлов;  несколько  маленьких  файлов  локализации
+    "влиты" в system.mo
 
 [~] Экономика/Ресурсы: По многочисленным просьбам добавлена колонка "В час"
 [~] Админка: Процедура  обслуживания  БД  теперь  удаляет  только  сообщения  с
@@ -79,10 +85,6 @@ Project "SuperNova.WS" Release 26.1 - We speak English! (2011-03-XX XX:XX)
 [@] Альянсы: Страницы "Настройка прав  доступа",  "Список  участиков  Альянса",
     "Поиск Альянса", "Создание Альянса", "Управление заявками"  переделаны  под
     PTE
-[~] Локализация: Серьезно переработаны файлы локализации: добавлена полноценная
-    информация о локализации (файл language.mo в каталоге локализации); удалено
-    множество неиспользуемых файлов;  несколько  маленьких  файлов  локализации
-    "влиты" в system.mo
 
 
 Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
