misc: Removed version number from README

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Project "SuperNova.WS" Release 26
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Project "SuperNova.WS"
+~~~~~~~~~~~~~~~~~~~~~~
 "SuperNova.WS" (shortly SN) is  a  massive  multiplayer  online  browser  space
 strategy game (like oGame). SN is a very heavily modified XNova RageRepack v226
 
