doc: readme and changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V26e22
+Текущая версия V27
 =====================
 
 Project "SuperNova.WS" Release 27 - We speak English! (2011-03-15 00:10)
