--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -81,7 +81,7 @@ Project "SuperNova.WS" Release 27 - We speak English! (2011-03-15 00:10)
 [%] Флот: исправлена ошибка неудаления пустого САБа после атаки
 [%] Флот: Исправлена ошибка дублирования списка САБов
 [%] Альянсы: Исправлена ошибка вывода заявки  на  странице  управления  заявок.
-    Теперь если в заявке есть переводы строк, то заявка корректо форматируется
+    Теперь если в заявке есть переводы строк, то заявка корректно форматируется
 [%] Админка: Исправлена баннерилка
 [%] Вселенная: Корректно выводится сообщение при попытке нападения на игрока  в
     отпуске
