doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -15,6 +15,9 @@
 “екуща€ верси€ V27
 =====================
 
+[-] ‘лоты: ”далена ссылка на редактирование закладок со  страницы  1  -  теперь
+    закладки можно редактировать через левое меню
+
 Project "SuperNova.WS" Release 27 - We speak English! (2011-03-15 00:10)
 ========================================================================
 
