misc-FLT: Added + sign to ship number if fleet transporting cargo

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -15,6 +15,9 @@
 Текущая версия V27
 =====================
 
+[+] Интерфейс:  В  списках  летящих  флотов  к  количеству  кораблей  во  флоте
+    добавляется в конце знак "+" если флот везет ресурсы
+
 [-] Флоты: Удалена ссылка на редактирование закладок со  страницы  1  -  теперь
     закладки можно редактировать через левое меню
 
