--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,12 @@
 Следующий релиз
 ===============
 
-Текущая версия V27
-=====================
+Текущая версия V27a1
+====================
+
+[!] Экономика: Изменена выработка энергии.  Во-первых  -  модификатор  скорости
+    игры теперь не действует на энергию. Во-вторых - температура планеты влияет
+    на выработку солнечных электростанций
 
 [+] Интерфейс:  В  списках  летящих  флотов  к  количеству  кораблей  во  флоте
     добавляется в конце знак "+" если флот везет ресурсы
