misc-ECO: Thermonuclear electrostation production now use off-like formulae. Also correctly calculated temperatures on moons

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -15,13 +15,20 @@
 Текущая версия V27a1
 ====================
 
-[!] Экономика: Изменена выработка энергии.  Во-первых  -  модификатор  скорости
-    игры теперь не действует на энергию. Во-вторых - температура планеты влияет
-    на выработку солнечных электростанций
+[!] Экономика: Изменена выработка энергии.
+      Во-первых  -  модификатор  скорости игры теперь не действует на энергию.
+      Во-вторых  -  температура   планеты   влияет   на   выработку   солнечных
+      электростанций
+      В-третьих - Производство энергии на  термоядерной  электростанции  теперь
+      считается по формуле оффа:
+        30 * [Э] * (1,05 + [Е] * 0,01) ^ [Э]
+      где Э - уровень электростанции, Т - уровень энергетической технологии
 
 [+] Интерфейс:  В  списках  летящих  флотов  к  количеству  кораблей  во  флоте
     добавляется в конце знак "+" если флот везет ресурсы
 
+[~] Экономика: Энергия считается более аккуратно
+[~] Вселенная: Правильно считается минимальная и максимальная температура луны
 [-] Флоты: Удалена ссылка на редактирование закладок со  страницы  1  -  теперь
     закладки можно редактировать через левое меню
 
