misc-ECO: Energy tech no more give bonus to electricity production

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -23,6 +23,16 @@
       считается по формуле оффа:
         30 * [Э] * (1,05 + [Е] * 0,01) ^ [Э]
       где Э - уровень электростанции, Т - уровень энергетической технологии
+      В-четвертых - энергетическая технология  больше  не  дает  дополнительный
+      бонус к производительности электроэнергии
+      Выработка энергии изменена исходя из следующих правил:
+      1. Электростанция может поддерживать одну шахту и один синтезатор рудника
+      того же уровня (взято с оффа)
+      2. Формула выработки термоядерной электростанции взята с оффа
+      3.  Средняя  температура  на  планете  -  20  градусов  (это  планеты   с
+      минимальной температурой 0 градусов и максимальной 40 градусов). На такой
+      планете эффективность солнечной электростанции будет 100%. Каждый  градус
+      разницы изменяет эффективность электростанции на 5%.
 
 [+] Интерфейс:  В  списках  летящих  флотов  к  количеству  кораблей  во  флоте
     добавляется в конце знак "+" если флот везет ресурсы
