fix-INT: Fixed length of code field on view report page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -39,8 +39,13 @@
 
 [~] Ёкономика: Ёнерги€ считаетс€ более аккуратно
 [~] ¬селенна€: ѕравильно считаетс€ минимальна€ и максимальна€ температура луны
+
 [-] ‘лоты: ”далена ссылка на редактирование закладок со  страницы  1  -  теперь
     закладки можно редактировать через левое меню
+
+[%] –апорты: Ќа странице просмотра  рапортов  максимальное  количество  в  поле
+    ввода кода выставлено в 32
+
 
 Project "SuperNova.WS" Release 27 - We speak English! (2011-03-15 00:10)
 ========================================================================
