int-IMP: Added temperature to Empire Overview

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -36,6 +36,8 @@
 
 [+] Интерфейс:  В  списках  летящих  флотов  к  количеству  кораблей  во  флоте
     добавляется в конце знак "+" если флот везет ресурсы
+[+] Обзор Империи: Добавлена температура планеты. В колонке ИТОГО - минимальная
+    и максимальная среди всех температур
 
 [~] Экономика: Энергия считается более аккуратно
 [~] Вселенная: Правильно считается минимальная и максимальная температура луны
