feat-NWS: Added mass-mail option to news edit

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -38,6 +38,7 @@
     добавляется в конце знак "+" если флот везет ресурсы
 [+] Обзор Империи: Добавлена температура планеты. В колонке ИТОГО - минимальная
     и максимальная среди всех температур
+[+] Новости: Добавлена возможность массовой рассылки новости всем игрокам
 
 [~] Экономика: Энергия считается более аккуратно
 [~] Вселенная: Правильно считается минимальная и максимальная температура луны
@@ -54,9 +55,12 @@ Project "SuperNova.WS" Release 27 - We speak English! (2011-03-15 00:10)
 
 [!] Движок:  Теперь  СН  может  размещаться  на  веб-сервере  на  любом  уровне
     вложенности каталогов
-[!] Локализация: Добавлена английская локализация (с)  madmax1991.  Существенно
-    уменьшено количество файлов локализации: неиспользуемые  файлы  удалены,  а
-    небольшие файлы влиты в system.mo
+[!] Локализация: Добавлена английская локализация (с)  madmax1991.
+[!] Локализация: Серьезно переработаны файлы локализации: добавлена полноценная
+    информация о локализации (файл language.mo в каталоге локализации); удалено
+    множество неиспользуемых файлов;  несколько  маленьких  файлов  локализации
+    "влиты" в system.mo. Формат файла language.mo на текущий момент объявляется
+    финальным. Просьба всем локализаторам придерживаться этого формата
 [!] Включена возможность выбора языка для пользователей
 [!] Закладки: Полностью переписана система закладок. Теперь закладки хранятся в
     отдельной таблице и не захламляют данные пользователя. Полностью переделано
@@ -71,10 +75,6 @@ Project "SuperNova.WS" Release 27 - We speak English! (2011-03-15 00:10)
 
 [+] Админка: Язык игры по  умолчанию  теперь  выбирается  из  списка  доступных
     языков
-[+] Локализация: Серьезно переработаны файлы локализации: добавлена полноценная
-    информация о локализации (файл language.mo в каталоге локализации); удалено
-    множество неиспользуемых файлов;  несколько  маленьких  файлов  локализации
-    "влиты" в system.mo
 [+] ЧаВо: В настройках сервера  добавлена  возможность  задать  URL  для  ЧаВо.
     Добавлен соответствующий пункт в левое меню
 [+] Добавлен файл /README на английском языке.
@@ -1562,7 +1562,7 @@ Project "SuperNova.WS" Release 17 (2010-09-23 14:01)
 [%] Фикс, устраняющий проблемы с начислением ресурсов и дюпы ракет/шпионов
 
 2009-10-12 23:20
-[~] Изменена формула расчета размера луны
+[~] Луна: Изменена формула расчета размера луны
     $SizeMin = 1000 + ( $Chance * 100 );
     $SizeMax = 2999 + ( $Chance * 200 );
     Т.е. от 1000 км до 9999 км.
