misc-ECO: Finalized formulae of solar station production. It's normalized for planets with temp max 40 degrees

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -31,8 +31,7 @@
       2. Формула выработки термоядерной электростанции взята с оффа
       3.  Средняя  температура  на  планете  -  20  градусов  (это  планеты   с
       минимальной температурой 0 градусов и максимальной 40 градусов). На такой
-      планете эффективность солнечной электростанции будет 100%. Каждый  градус
-      разницы изменяет эффективность электростанции на 5%.
+      планете эффективность солнечной электростанции будет 100%
 
 [+] Интерфейс:  В  списках  летящих  флотов  к  количеству  кораблей  во  флоте
     добавляется в конце знак "+" если флот везет ресурсы
