doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -38,6 +38,7 @@
 [+] Обзор Империи: Добавлена температура планеты. В колонке ИТОГО - минимальная
     и максимальная среди всех температур
 [+] Новости: Добавлена возможность массовой рассылки новости всем игрокам
+[+] Экономика: Дописан пересчет времени построек в очереди
 
 [~] Экономика: Энергия считается более аккуратно
 [~] Вселенная: Правильно считается минимальная и максимальная температура луны
