misc-UNI: Start planet now always will have tmin=0, tmax=40

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -42,6 +42,7 @@
 
 [~] Экономика: Энергия считается более аккуратно
 [~] Вселенная: Правильно считается минимальная и максимальная температура луны
+[~] Вселенная: Стартовая планета теперь имеет температуру 0/40
 
 [-] Флоты: Удалена ссылка на редактирование закладок со  страницы  1  -  теперь
     закладки можно редактировать через левое меню
