feat-ECO: V27a2: Intergalactic Research Net now connects nanolabs on planet also

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a1
+Текущая версия V27a2
 ====================
 
 [!] Экономика: Изменена выработка энергии.
@@ -41,6 +41,8 @@
 [+] Экономика: Дописан пересчет времени построек в очереди
 
 [~] Экономика: Энергия считается более аккуратно
+[~] Экономика:  Изменена  формула  расчета  МИС.  Теперь  нанолаборатории   на
+    планетах, включенных в МИС так же работают
 [~] Вселенная: Правильно считается минимальная и максимальная температура луны
 [~] Вселенная: Стартовая планета теперь имеет температуру 0/40
 
