--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -38,7 +38,17 @@
 [+] Обзор Империи: Добавлена температура планеты. В колонке ИТОГО - минимальная
     и максимальная среди всех температур
 [+] Новости: Добавлена возможность массовой рассылки новости всем игрокам
-[+] Экономика: Дописан пересчет времени построек в очереди
+[+] Экономика: Изменена схема работы МИС. Теперь МИС работает следующим образом:
+      1. По каждой планете вычисляется эффективный уровень исследования (ЭУИ) = уровень лаборатории / (0,5 ^ уровень нанитки)
+      2. Планеты сортируются по эффективному уровню
+      3. Отсекаются планеты с уровенм лаборатории, недостаточным для проведения данного исследования
+      4. Выбирается верхние (уровень МИС + 1) планет в списке и суммируется ЭУИ этих планет
+      5. Получившееся число подставляется в формулу вычисления времени исследования
+      Следствия:
+      1. Нанолаборатория теперь увеличивают эффективность лаборатории только на той планете, на которой они расположены
+      2. Время исследования теперь одинаково на всех планетах. На некоторых планетах чуть больше, на некоторых - чуть меньше, но в среднем - лучше, чем было раньше
+      3. Имеет смысл держать только (уровень МИС + 1) планет с лабораториями. Остальные просто не будут подключаться.
+      3.1. Примечание к следствию 3 - собственно, так было и раньше - все равно исследование могло проводиться только на одной планете
 
 [~] Экономика: Энергия считается более аккуратно
 [~] Экономика:  Изменена  формула  расчета  МИС.  Теперь  нанолаборатории   на
