fix-FLT: V27a5: When last fleet in ACS are called back ACS correctly removed

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -72,6 +72,9 @@
 
 [%] Рапорты: На странице просмотра  рапортов  максимальное  количество  в  поле
     ввода кода выставлено в 32
+[%] Флоты:  Теперь  при  возврате  последнего  флота  в  САБе  САБ   корректно
+    уничтожается
+
 
 [@] Админка: Проставлены права доступа к отдельным страницам в  зависимости  от
     уровня.
