--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a4
+Текущая версия V27a6
 ====================
 
 [!] Экономика: Изменена выработка энергии.
@@ -74,6 +74,8 @@
     ввода кода выставлено в 32
 [%] Флоты:  Теперь  при  возврате  последнего  флота  в  САБе  САБ   корректно
     уничтожается
+[%] Ракеты: Исправлена ошибка в процедуре ракетной атаки - технологии  щитов  и
+    брони были перепутаны местами
 
 
 [@] Админка: Проставлены права доступа к отдельным страницам в  зависимости  от
