int-TOP-V27a8: Added flying/total fleet/expeditions to topbar. Reworked mail informer cell

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -57,6 +57,8 @@
       Остальные просто не будут подключаться.
       3.1. Примечание к следствию 3 - собственно, так было и раньше - все равно
       исследование могло проводиться только на одной планете
+[+] Топбар:  Добавлено  количество  флотов  и  экспедиций  в  полете  и  всего.
+    Переработана ячейка сообщений
 
 [~] Экономика: Энергия считается более аккуратно
 [~] Экономика:  Изменена  формула  расчета  МИС.  Теперь  нанолаборатории   на
