--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -68,6 +68,7 @@
 [~] Чат: Ники модераторов (auth_level=1) и  операторов  (auth_level=2)  в  чате
     теперь тоже выделяются.  По  умолчании  соответственно  зеленым  и  красным
     цветом
+[~] Новости: Чекбокс "Разослать новость игрокам" включен по умолчанию
 
 [-] Флоты: Удалена ссылка на редактирование закладок со  страницы  1  -  теперь
     закладки можно редактировать через левое меню
