feat-INT-V27a9: Topbar's flying fleet and expeditions now interactive, changes according to event and has tooltip over it with description of nearest event

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a6
+Текущая версия V27a9
 ====================
 
 [!] Экономика: Изменена выработка энергии.
@@ -57,8 +57,13 @@
       Остальные просто не будут подключаться.
       3.1. Примечание к следствию 3 - собственно, так было и раньше - все равно
       исследование могло проводиться только на одной планете
+[+] Топбар: Переработана ячейка сообщений
 [+] Топбар:  Добавлено  количество  флотов  и  экспедиций  в  полете  и  всего.
-    Переработана ячейка сообщений
+    Количество флотов и экспедиций в  полете  интерактивно:  оно  автоматически
+    изменяется в соответствие с происходящими событиями - прибытие, возвращение
+    и окончание миссии флота (как они должны были произойти на момент  загрузки
+    страницы).  При  наведении  курсора  на  соответствующую  ячейку  всплывает
+    подсказка с описанием ближайшего события
 
 [~] Экономика: Энергия считается более аккуратно
 [~] Экономика:  Изменена  формула  расчета  МИС.  Теперь  нанолаборатории   на
