misc-WIKI: Changed naming and description for Impulse and Reactive engines

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,8 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a9
-====================
+Текущая версия V27a10
+=====================
 
 [!] Экономика: Изменена выработка энергии.
       Во-первых  -  модификатор  скорости игры теперь не действует на энергию.
@@ -74,6 +74,9 @@
     теперь тоже выделяются.  По  умолчании  соответственно  зеленым  и  красным
     цветом
 [~] Новости: Чекбокс "Разослать новость игрокам" включен по умолчанию
+[~] НоваПедия: "Ракетный двигатель" переименован в "Химический", а "Импульсный"
+    - в  "Ионный".  Для  них  полностью  изменено  описание.  Так  же  изменено
+    соответствующе описание кораблей.
 
 [-] Флоты: Удалена ссылка на редактирование закладок со  страницы  1  -  теперь
     закладки можно редактировать через левое меню
@@ -84,7 +87,9 @@
     уничтожается
 [%] Ракеты: Исправлена ошибка в процедуре ракетной атаки - технологии  щитов  и
     брони были перепутаны местами
-
+[%] Экономика: Исправлен глюк с невычитанием дейтрия при отрицательном балансе
+[%] JS: Исправлен глюк в скрипте таймера из-за которого  не  отсчитывало  назад
+    ресурсы при переполненных складах
 
 [@] Админка: Проставлены права доступа к отдельным страницам в  зависимости  от
     уровня.
