feat-ECO-V27a11: Added 3 bars right to the planet image that corresponds to % of production (setted on Resources page). See changelog.txt for more details

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a10
+Текущая версия V27a11
 =====================
 
 [!] Экономика: Изменена выработка энергии.
@@ -64,6 +64,15 @@
     и окончание миссии флота (как они должны были произойти на момент  загрузки
     страницы).  При  наведении  курсора  на  соответствующую  ячейку  всплывает
     подсказка с описанием ближайшего события
+[+] Список планет: Справа от иконки планеты добавлены три колонки, показывающие
+    процент производительности шахт и  синтезаторов:  серый  -  шахта  металла,
+    голубой - синтезатор кристаллов, фиолетовый -  синтезатор  дейтрия.  Высота
+    колонки пропорциональна проценту производства, а  фон  кодирует  диапазоны:
+    желтый - 80-90%, оранжевый - 50-70%%, красный - меньее 50%. На высоту и фон
+    колонки влияет ИСКЛЮЧИТЕЛЬНО процент производства, выставленный на странице
+    "Ресурсы"
+[+] Империя: Цифра производства ресурсов теперь  кодируется  цветом  аналогично
+    фону колонки прозиводства ресурсов (см. выше)
 
 [~] Экономика: Энергия считается более аккуратно
 [~] Экономика:  Изменена  формула  расчета  МИС.  Теперь  нанолаборатории   на
