fix-IMP: Fixed wrong max field number on moons

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -99,6 +99,8 @@
 [%] Экономика: Исправлен глюк с невычитанием дейтрия при отрицательном балансе
 [%] JS: Исправлен глюк в скрипте таймера из-за которого  не  отсчитывало  назад
     ресурсы при переполненных складах
+[%] Империя: Исправлена ошибка отображения маскимального  количества  полей  на
+    луне
 
 [@] Админка: Проставлены права доступа к отдельным страницам в  зависимости  от
     уровня.
