misc-HTML: Made header w3c-compliant

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -86,6 +86,7 @@
 [~] НоваПедия: "Ракетный двигатель" переименован в "Химический", а "Импульсный"
     - в  "Ионный".  Для  них  полностью  изменено  описание.  Так  же  изменено
     соответствующе описание кораблей.
+[~] HTML: Исправлен хидер, что бы быть W3C-compliant
 
 [-] Флоты: Удалена ссылка на редактирование закладок со  страницы  1  -  теперь
     закладки можно редактировать через левое меню
@@ -101,6 +102,8 @@
     ресурсы при переполненных складах
 [%] Империя: Исправлена ошибка отображения маскимального  количества  полей  на
     луне
+[%] НоваПедия:  Исправлена  очепятка  из-за  которой  в  списке  кораблей   на
+    химических двигателях не показывался переработчик
 
 [@] Админка: Проставлены права доступа к отдельным страницам в  зависимости  от
     уровня.
