fix-FF-V27a13: Fixed SUDDEN denial in bugofucks with sednding chat message

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a11
+Текущая версия V27a13
 =====================
 
 [!] Экономика: Изменена выработка энергии.
@@ -104,6 +104,8 @@
     луне
 [%] НоваПедия:  Исправлена  очепятка  из-за  которой  в  списке  кораблей   на
     химических двигателях не показывался переработчик
+[%] Фаерфокс: Исправлен ВНЕЗАПНЫЙ отказ глюкобага отправлять сообщения  в  чат.
+    Тормозилла - так поддерживать!
 
 [@] Админка: Проставлены права доступа к отдельным страницам в  зависимости  от
     уровня.
