fix-INT-V27a14: Correctly generated events for mission RELOCATE in topbar fleet counters

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a13
+Текущая версия V27a14
 =====================
 
 [!] Экономика: Изменена выработка энергии.
@@ -105,7 +105,7 @@
 [%] НоваПедия:  Исправлена  очепятка  из-за  которой  в  списке  кораблей   на
     химических двигателях не показывался переработчик
 [%] Фаерфокс: Исправлен ВНЕЗАПНЫЙ отказ глюкобага отправлять сообщения  в  чат.
-    Тормозилла - так поддерживать!
+    Тормозилла - так поддерживать! Ибо то, что висит можно только поддерживать.
 
 [@] Админка: Проставлены права доступа к отдельным страницам в  зависимости  от
     уровня.
