misc-INT: Returned default left-align for td.c style. Some redesign of fleet-send-page-0

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -87,6 +87,8 @@
     - в  "Ионный".  Для  них  полностью  изменено  описание.  Так  же  изменено
     соответствующе описание кораблей.
 [~] HTML: Исправлен хидер, что бы быть W3C-compliant
+[~] Флоты: Страница 0 -  перемещена  кнопка  "Дальше"  на  одну  строку  вверх.
+    Добавена кнопка "Свезти ресурсы"
 
 [-] Флоты: Удалена ссылка на редактирование закладок со  страницы  1  -  теперь
     закладки можно редактировать через левое меню
