--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a14
+Текущая версия V27a15
 =====================
 
 [!] Экономика: Изменена выработка энергии.
@@ -73,6 +73,8 @@
     "Ресурсы"
 [+] Империя: Цифра производства ресурсов теперь  кодируется  цветом  аналогично
     фону колонки прозиводства ресурсов (см. выше)
+[+] Свезти ресурсы: Добавлен JS-счетчик  общего  количества  свозимых  ресурсов
+    с учетом чекбоксов
 
 [~] Экономика: Энергия считается более аккуратно
 [~] Экономика:  Изменена  формула  расчета  МИС.  Теперь  нанолаборатории   на
