--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -75,6 +75,8 @@
     фону колонки прозиводства ресурсов (см. выше)
 [+] Свезти ресурсы: Добавлен JS-счетчик  общего  количества  свозимых  ресурсов
     с учетом чекбоксов
+[+] Свезти ресурсы: Добавлено отображение количества необходимых  ресурсов  при
+    переходе по кнопке "Свезти ресурсы" со страницы постройки
 
 [~] Экономика: Энергия считается более аккуратно
 [~] Экономика:  Изменена  формула  расчета  МИС.  Теперь  нанолаборатории   на
