feat-CHT-V27a16: Deep rework of internal chat

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a15
+Текущая версия V27a16
 =====================
 
 [!] Экономика: Изменена выработка энергии.
@@ -32,6 +32,18 @@
       3.  Средняя  температура  на  планете  -  20  градусов  (это  планеты   с
       минимальной температурой 0 градусов и максимальной 40 градусов). На такой
       планете эффективность солнечной электростанции будет 100%
+[!] Чат: Полностью  переписан  внутренний  чат.
+      1.  Полностью  переписана  JS-часть.  В  частности  -  AJAX-вызовы   теперь
+      осуществляются  через jQuery
+      2. Добавлена  заплатка  для  корректной  работы  чата  в  глюкофоксе
+      3. Добавлена защита на стороне клиента от слишком частых обновлений
+      4. Полностью переработана PHP-часть чата
+      5. Корректно показывает заголовок в истории  чата  -  "общий  чат"  и  "чат
+      альянса" соответственно
+      6. История чата теперь грузиться в виде нормальной страницы СН, а не в виде
+      "обмылка", как раньше
+      7. Содержимое языкового файла chat.mo отфильтровано и влито в system.mo
+      8. Множество других добавлений и усовершенствований
 
 [+] Интерфейс:  В  списках  летящих  флотов  к  количеству  кораблей  во  флоте
     добавляется в конце знак "+" если флот везет ресурсы
