doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -124,6 +124,9 @@
     химических двигателях не показывался переработчик
 [%] Фаерфокс: Исправлен ВНЕЗАПНЫЙ отказ глюкобага отправлять сообщения  в  чат.
     Тормозилла - так поддерживать! Ибо то, что висит можно только поддерживать.
+[%] Альянсы: Исправлены ошибки редактирования информации Альянсов
+[%] Статистика: Исправлено неправильно отображение даты  последнего  обновления
+    статистики при просмотре статистики Альянсов
 
 [@] Админка: Проставлены права доступа к отдельным страницам в  зависимости  от
     уровня.
