fix-FLT-V27a18: Fixed JS counter for fleets/expeditions. Fixed false anithacker alert 'User trying to return fleet that didn't belong to him'

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a17
+Текущая версия V27a18
 =====================
 
 [!] Экономика: Изменена выработка энергии.
@@ -161,7 +161,9 @@
     не может назначить кому-либо уровень доступа, равный  или  больший  своего.
     Таким образом через админку невозможно  назначить  второго  Администратора.
     Однако это можно проделать напрямую в БД
-
+[@] Админка: Исправлено ложное  срабатывание  системы  определения  взлома  при
+    обновлении пользователем страницы  "Флоты  в  полете"  сразу  после  отдачи
+    команды "Обратно" последнему из текущих флотов
 
 Project "SuperNova.WS" Release 27 - We speak English! (2011-03-15 00:10)
 ========================================================================
