misc-IMP: Added registration date to Imperor page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -89,6 +89,7 @@
     с учетом чекбоксов
 [+] Свезти ресурсы: Добавлено отображение количества необходимых  ресурсов  при
     переходе по кнопке "Свезти ресурсы" со страницы постройки
+[+] Император: Добавлена дата регистрации игрока: "Император [Имярек] с [дата]"
 
 [~] Экономика: Энергия считается более аккуратно
 [~] Экономика:  Изменена  формула  расчета  МИС.  Теперь  нанолаборатории   на
