misc-CHT: Fixed error parasing smiles :( and ;)

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a18
+Текущая версия V27a19
 =====================
 
 [!] Экономика: Изменена выработка энергии.
@@ -109,6 +109,7 @@
 [~] Список  забаненных:  Полностью  переписан.  Список  теперь  сортируется  по
     возрастанию даты бана - последние забаненные появляются  в  начале  списка.
     Добавлено отображение разбанов
+[~] Чат: Добавлена трансляция в смайлы сочетания ":)" - :smile
 
 [-] Флоты: Удалена ссылка на редактирование закладок со  страницы  1  -  теперь
     закладки можно редактировать через левое меню
@@ -131,6 +132,7 @@
 [%] Альянсы: Исправлены ошибки редактирования информации Альянсов
 [%] Статистика: Исправлено неправильно отображение даты  последнего  обновления
     статистики при просмотре статистики Альянсов
+[%] Чат: Исправлена ошибка парсинга смайлов ":(" и ";)"
 
 [@] БД: Изменена структура таблицы банов banned
 [@] Админка: Проставлены права доступа к отдельным страницам в  зависимости  от
