misc-CHT: Restored WINK smile with new code

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -132,7 +132,8 @@
 [%] Альянсы: Исправлены ошибки редактирования информации Альянсов
 [%] Статистика: Исправлено неправильно отображение даты  последнего  обновления
     статистики при просмотре статистики Альянсов
-[%] Чат: Исправлена ошибка парсинга смайлов ":(" и ";)"
+[%] Чат: Исправлена ошибка парсинга смайлов ":(" и ";)" (код последнего заменен
+    на ":wink:" из-за непоняток с парсингом)
 
 [@] БД: Изменена структура таблицы банов banned
 [@] Админка: Проставлены права доступа к отдельным страницам в  зависимости  от
