--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Следующий релиз
 ===============
 
-Текущая версия V27a19
+Текущая версия V27a20
 =====================
 
 [!] Экономика: Изменена выработка энергии.
@@ -44,6 +44,16 @@
       "обмылка", как раньше
       7. Содержимое языкового файла chat.mo отфильтровано и влито в system.mo
       8. Множество других добавлений и усовершенствований
+[!] Альянсы:  Добавленв  подсистема  дипломатии  (главная  внутренняя  страница
+    Альянса, таблица "Дипломатия"). Глава Альянса может начинать  переговоры  и
+    принимать  предложения  от  других  Альянсов.  Отношения  между   Альянсами
+    включают:
+      1. Нейтралитет. Отношение по умолчанию
+      2. Война.
+    Что  бы  изменилось  отношения  между  Альянсами,  другая  сторона   должна
+    потвердить предложение об изменении по ссылке "Переговоры", доступной главе
+    Альянса. Там же можно сделать предложение об  изменении  отношений  другому
+    Альянсу
 
 [+] Интерфейс:  В  списках  летящих  флотов  к  количеству  кораблей  во  флоте
     добавляется в конце знак "+" если флот везет ресурсы
