doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -57,9 +57,11 @@ Project "SuperNova.WS" Release 28 Release Candidate
 [!] Башинг: Добавлена система защиты  от  башинга.  Защита  не  дает  отправить
     больше флотов и волн, чем указано в правилах. Настройки по  умолчанию  -  в
     течении 24 часов 3 волны по 3 атаки не более 30 минут между атаками в одной
-    волне
-      1.  За  атаку  засчитываются  миссии:  "Атака",  "Совместная   атака"   и
-      "Уничтожить луну". Миссия "Ракетная атака" атакой не считается
+    волне. Настроить систему защиты от башинга можно через таблицу  `config`  -
+    группа параметров fleet_bashing_*. Установка параметра fleet_bashing_attack
+    в 0 означает полное отключение системы защиты.
+      1. Атакой считаются миссии: "Атака",  "Совместная  атака"  и  "Уничтожить
+      луну". Миссия "Ракетная атака" атакой не считается
       2. Учитываются флоты в полете. Т.е. если игрок уже запустил две  волны  и
       еще одна находится в полете - он больше не сможет запускать флоты.
       3. Атаки засчитываются по факту - т.е.  если  полностью  отменить  волну,
