fix-ADM-V28c1: Fixed 'Page not found' messages in admin interface

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -198,6 +198,7 @@ Project "SuperNova.WS" Release 28 Release Candidate
     статистики при просмотре статистики Альянсов
 [%] Чат: Исправлена ошибка парсинга смайлов ":(" и ";)" (код последнего заменен
     на ":wink:" из-за непоняток с парсингом)
+[%] Админка: Исправлены сообщения "Page not found" в формах
 
 [@] БД: Изменена структура таблицы банов banned
 [@] Система:  Добавлена  процедура  ежедневного  обслуживания:  чистка  таблицы
